Fixed "double" reveal animation on pagebuilder slides. This fix waits until [data-content-type="slide"] will be wrapped into 'slick-list'

--- a/view/frontend/web/css/source/components/_scroll-reveal.less
+++ b/view/frontend/web/css/source/components/_scroll-reveal.less
@@ -27,6 +27,14 @@
                 visibility: visible;
             }
         }
+
+        // Fixed "double animation" on pagebuilder slides
+        .scroll-reveal-container .pagebuilder-slider > [data-content-type="slide"] .pagebuilder-poster-content > div > *,
+        .scroll-reveal-container .pagebuilder-slider > [data-content-type="slide"] .pagebuilder-poster-content > button,
+        .scroll-reveal-container .pagebuilder-slider > [data-content-type="slide"] .pagebuilder-collage-content > div > *,
+        .scroll-reveal-container .pagebuilder-slider > [data-content-type="slide"] .pagebuilder-collage-content > button {
+            animation: none !important;
+        }
     }
 
     .scroll-reveal-finished {
